# StellarDataLab

./: .gitignore  CATALOG.md  CONTRIBUTING.md  GIT_STATUS.md  LICENSE  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  READY_TO_PUSH.md  RESEARCH.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check-quality.yml  validate-datasets.yml
.kiro/specs/stellar-data-lab/: .config.kiro  design.md  requirements.md  tasks.md
datasets/: README.md
datasets/curated/: .gitkeep
datasets/metadata/: .gitkeep
datasets/raw/: .gitkeep
docs/: README.md  pipeline-guide.md
pipeline/: collectors.py  exporters.py  orchestrator.py  transformers.py  validators.py
schemas/: README.md
scripts/: README.md
tests/: __init__.py  conftest.py  test_transformers.py  test_validators.py
