[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-data-lab"
version = "0.1.0"
description = "Open-source research and data repository for the Stellar ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "StellarDataLab Contributors"}
]
keywords = ["stellar", "blockchain", "datasets", "research", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.11",
    "flake8>=6.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/stellar/stellar-data-lab"
Documentation = "https://github.com/stellar/stellar-data-lab#readme"
Repository = "https://github.com/stellar/stellar-data-lab.git"
"Bug Tracker" = "https://github.com/stellar/stellar-data-lab/issues"

[tool.setuptools]
packages = ["pipeline"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: integration tests",
    "unit: unit tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["pipeline"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
min_coverage_percentage = 80
